<?xml version="1.0"?>
<package format="2">
  <name>arti_move_base_skill</name>
  <version>1.0.0</version>
  <description>The arti_move_base_skill package</description>

 
  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Muehlbacher</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arti_move_base_msgs</build_depend>
  <build_depend>arti_movement_skill_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>arti_move_base_msgs</build_export_depend>
  <build_export_depend>arti_movement_skill_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>arti_move_base_msgs</exec_depend>
  <exec_depend>arti_movement_skill_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <arti_movement_skill_interface plugin="${prefix}/skill_plugin.xml" />
  </export>
</package>
